@@ -1,3 +1,8 @@
+2018-12-24  Jan Hubicka  <hubicka@ucw.cz>
+
+	* lto-symtab.c (lto_symtab_merge_decls_2): Do not report ODR violations
+	for method whose basetype was already reported.
+
 2018-11-30  Michael Ploujnikov  <michael.ploujnikov@oracle.com>
 
 	Minimize clone counter memory usage in LTO.
